# AzapretTV

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: open-source-notices.txt
app/src/main/assets/lists/: youtube-hosts.txt
app/src/main/cpp/: CMakeLists.txt  azapret_byedpi.c  native_process.c
app/src/main/java/app/azapret/tv/: AutostartReceiver.kt  MainActivity.kt  StrategyTestActivity.kt
app/src/main/java/app/azapret/tv/config/: AppSettings.kt
app/src/main/java/app/azapret/tv/diagnostics/: AppLog.kt
app/src/main/java/app/azapret/tv/vpn/: AzapretDpiProxy.kt  AzapretVpnService.kt  NativeProcess.kt
app/src/main/res/drawable/: banner.xml  ic_launcher_tv.xml  ic_vpn.xml  tv_banner.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  styles.xml
